<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/concrn_logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/name_and_number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="5dp" />

    <Button
        android:id="@+id/bt_continue"
        style="@style/Button_theme"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:onClick="Continue"
        android:text="@string/bt_continue" />

</LinearLayout>