<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/text_street_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/address_unavailable"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        style="@style/Button_theme"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="5dp"
        android:onClick="ReportCrises"
        android:text="@string/bt_report_crises" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/call_911"
        android:textSize="16sp"
        android:textStyle="italic" />

</LinearLayout>